# new-project

./: .gitignore  CMakeLists.txt  README.md  everything.cpp  everything.h  main.cpp  test.cpp
include/: mylib.hh
src/: mylib.cc
tests/: test.cc
